--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -14,20 +14,25 @@ img {
 	align-content: center;
 }
 
+.center col-sm-12 {
+	align-content: center;
+}
+
+
 .form-group {
-    background-color: orange;
+    border: #FFC04C
 }
 
 h1 {
     text-align: center;
-    font-family: 'Londrina Sketch', cursive;
+    font-family: "Times New Roman", Times, serif;
     font-size: 65px;
     margin: 50px;
 }
 
 h2 {
      text-align: center;
-    font-family: 'Londrina Sketch', cursive;
+    font-family: "Times New Roman", Times, serif;
     font-size: 20px;
     margin: 50px;
 }
